update: 직접 구성 package.json 수정
* 공통
  - dependencies에 react, react-dom 추가
* ESBuild
  - live-server를 사용하는 방법을 사용하지 않도록 수정
  - 위 수정사항으로 index.html 파일의 위치를 dist 내부로 이동

--- a/packages/self-esbuild/package.json
+++ b/packages/self-esbuild/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx npm-run-all --parallel build dev",
-    "dev": "live-server --port=3000 --host=localhost",
-    "build": "node esbuild.config.js"
+    "dev": "npx esbuild --watch --bundle src/index.jsx --outdir=dist --servedir=dist",
+    "build": "npx esbuild --bundle src/index.jsx --outdir=dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
-    "esbuild": "^0.16.17"
+    "esbuild": "^0.23.1"
   }
 }
